--- a/src/App.css
+++ b/src/App.css
@@ -991,9 +991,10 @@ footer .containerFooter div ul li {
   margin-top: 50px;
   display: flex;
   flex-wrap: nowrap;
-  gap: 60px;
+  gap: 20px;
   height: 70vh;
   justify-content: center;
+  width: 95%;
 }
 
 .tarjeta-producto {
@@ -1106,4 +1107,16 @@ footer .containerFooter div ul li {
   aspect-ratio: 1;
   text-align: center;
   /* margin-bottom: 15px; */
+}
+
+.card-btn-delete {
+  background-color: hsl(0, 100%, 60%);
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.card-btn-delete:hover {
+  background-color: hsl(0, 100%, 70%);
 }
